--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "slightly-askew <oaskew@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@kadira/storybook-deployer": "^1.2.0",
     "eslint": "^3.19.0",
     "history": "^4.6.1",
     "polished": "^1.0.2",
@@ -34,7 +35,8 @@
     "eject": "react-scripts eject",
     "flow": "flow",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "eslintConfig": {
     "extends": "react-app"
