--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-flowtype": "^2.33.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "flow-bin": "^0.42.0",
-    "react-scripts": "^1.0.3"
+    "react-scripts": "^1.0.3",
+    "react-test-renderer": "^15.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
