--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
     "babel-eslint": "^7.2.3",
+    "enzyme": "^2.8.2",
     "eslint-plugin-flowtype": "^2.33.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "flow-bin": "^0.42.0",
