--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-component-queries": "^2.1.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^5.0.0-alpha.5",
     "react-sizeme": "^2.3.1",
