--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@kadira/storybook-deployer": "^1.2.0",
+    "babel-polyfill": "^6.23.0",
     "eslint": "^3.19.0",
     "history": "^4.6.1",
     "polished": "^1.0.2",
@@ -18,12 +19,12 @@
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.0.0",
-    "react-router-redux": "^5.0.0-alpha.5",
+    "react-router-redux": "next",
     "react-sizeme": "^2.3.1",
     "recompose": "^0.22.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "styled-components": "^1.4.6",
+    "styled-components": "^2.0.0",
     "webfontloader": "^1.6.27"
   },
   "devDependencies": {
