Add Anime and react-anime to project
Should remove react-motion if no longer using :/

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "dependencies": {
     "@kadira/storybook-deployer": "^1.2.0",
+    "animejs": "^2.0.2",
     "babel-polyfill": "^6.23.0",
     "eslint": "^3.19.0",
     "history": "^4.6.1",
     "polished": "^1.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.5.0",
+    "react-anime": "^0.3.4",
     "react-component-queries": "^2.1.1",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
