--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "babel": {
     "parser": "babel-eslint",
     "plugins": [
-      "flowtype"
+      "flowtype", ["lodash", { "id": ["lodash", "recompose"] }]
     ],
     "rules": {
       "flowtype/boolean-style": [
