--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "webfontloader": "^1.6.27"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
     "babel-eslint": "^7.2.3",
     "enzyme": "^2.8.2",
     "eslint-plugin-flowtype": "^2.33.0",
@@ -56,7 +55,16 @@
   "babel": {
     "parser": "babel-eslint",
     "plugins": [
-      "flowtype", ["lodash", { "id": ["lodash", "recompose"] }]
+      "flowtype",
+      [
+        "lodash",
+        {
+          "id": [
+            "lodash",
+            "recompose"
+          ]
+        }
+      ]
     ],
     "rules": {
       "flowtype/boolean-style": [
